# open-earable-python

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
docs/: README.md  api-reference.md  data-model.md  getting-started.md  migration-to-open-wearable.md  parser-internals.md
src/open_earable_python/: __init__.py  dataset.py  parser.py  scheme.py
src/open_earable_python/ipc/: __init__.py
src/open_wearable/: dataset.py  parser.py
src/open_wearables/: __init__.py  dataset.py  parser.py  scheme.py
src/open_wearables/data/: __init__.py  accessors.py  constants.py  sensor_dataset.py
src/open_wearables/ipc/: __init__.py  client.py  errors.py  models.py
src/open_wearables/parsing/: __init__.py  audio.py  base.py  headers.py  payload_parsers.py  stream.py
src/open_wearables/schema/: __init__.py  defaults.py  types.py
tests/: test_basic.py  test_oe_headers.py  test_payload_parsers.py  test_sensor_accessor.py
