[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-earable-python"
version = "0.1.0"
description = "Reader and utilities for multi-sensor OpenEarable recordings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["openearable", "earable", "sensors", "imu", "ppg", "audio", "wearables"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "ipython",
  "scipy",
  "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/your-user/open-earable-python"
Source = "https://github.com/your-user/open-earable-python"
Issues = "https://github.com/your-user/open-earable-python/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
