[build-system]
requires = ["setuptools>=80", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "open-earable-python"
dynamic = ["version"]
description = "Reader and utilities for multi-sensor OpenEarable recordings."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Karlsruhe Institut of Technology (KIT)", email = "open-earable@lists.kit.edu" }
]
keywords = ["openearable", "earable", "sensors", "imu", "ppg", "audio", "wearables", ".oe"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy",
  "pandas",
  "ipython",
  "scipy",
]

[project.urls]
Source = "https://github.com/OpenEarable/open-earable-python"
Issues = "https://github.com/OpenEarable/open-earable-python/issues"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
